// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon: Component should render correctly 1`] = `
<user.svg
  style={
    Object {
      "fill": "#FFF",
      "height": "28px",
      "width": "28px",
    }
  }
/>
`;

exports[`UserIcon: Component should render with custom styles 1`] = `
<user.svg
  style={
    Object {
      "fill": "blue",
      "height": "28px",
      "width": "28px",
    }
  }
/>
`;
